# audio-transcripter

./: .gitignore  Dockerfile  README.md  chat.md  dagster.yaml  docker-compose.yml  pyproject.toml  requirements.txt  workspace.yaml
app/: main.py
app/models/: transcription.py
app/routers/: transcription.py
app/services/: transcription_service.py
dagster_audio/: README.md  pyproject.toml  setup.cfg  setup.py
dagster_audio/dagster_audio/: definitions.py  io_managers.py  jobs.py  partitions.py  resources.py  schedules.py
dagster_audio/dagster_audio/assets/: __init__.py  audio_assets.py  file_assets.py
sfa/: sfa_youtube_phonemes.py  sfa_youtube_transcribe.py
tests/: test_transcription.py  utils.py
