[project]
name = "audio-transcripter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.3.0",
    "fastapi>=0.115.8",
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "transformers>=4.48.2",
    "uvicorn>=0.34.0",
]
