[project]
name = "audio-transcripter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.3.0",
    "dagster-graphql>=1.10.3",
    "dagster>=1.10.3",
    "dagster-webserver>=1.10.3",
    "httpx>=0.28.1",
    "protobuf>=5.29.3",
    "pydantic>=2.10.6",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "tiktoken>=0.8.0",
    "transformers>=4.48.2",
    "uvicorn>=0.34.0",
    "yt-dlp>=2024.3.10",
    "pandas>=2.2.3",
]

[dependency-groups]
dev = [
    "contxt>=0.1.1",
]

[tool.dagster]
module_name = "dagster_audio.definitions"
code_location_name = "dagster_audio"